# hpr-sim

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  COPYING  LICENSE  LICENSE.md  README.md  genindex.html  hpr-sim  hpr-sim-debug.py  hpr-sim.py  hpr-sim.spec  index.html  makefile  objects.inv  readme.md  requirements.txt  search.html  searchindex.js
.github/workflows/: build-test.yml  build.yml  unit-test-ubuntu.yml  unit-test-windows.yml
_sources/src/: algorithms.md.txt
config/: config_input.yml  config_output.yml  config_param.yaml  config_unit.yaml  config_unit.yml
doc/: DEV.md  FEATURES.md  HEADER.md  INPUT.md  MANUAL.md  conf.py  dev.md  features.md  index.rst  logo.ipynb  logo.py  manual.md
doc/figs/: diagram.fdb_latexmk  diagram.fls
doc/sphinx/: algorithms.md  conf.py  index.rst
doc/src/: algorithms.md  developer.rst  header.md
figs/: architecture.fdb_latexmk  architecture.fls  architecture.tex
input/: input.yaml  input.yml  param_config.yaml  unit_test.yml
input/prop/: AeroTech_J450DM.csv  AeroTech_J450DM.eng  AeroTech_J450DM.rse
input/unit_test/: patriot_aerodynamics.csv  unit_test.yml
lib/: .gitignore
src/: CMakeLists.txt  algorithms.html  developer.html  example.cpp  header.html  input.cpp  input.h  input.html  load_data.py  load_input.py
src/exec/: exec.py  exec_rand.py  telem.cpp  telem.h  telem_bind.cpp
src/gui/: gui_actions.py  gui_common.py  gui_elements.py  gui_events.py  gui_main.py
src/model/: aerodynamics.cpp  atmosphere.cpp  engine.cpp  engine.h  eom.cpp  flight.cpp  geodetic.cpp  geodetic.h  interp.cpp  interp.h  mass.cpp  model.cpp  model.h  model_bind.cpp  odeint.cpp  odeint.h  telem.cpp  telem.h  test.cpp  test_gsl.cpp  test_gsl.h
src/models/: data.h  model.cpp  model.h
src/postproc/: postproc_flight.py
src/preproc/: config_input.yml  config_param.yaml  input.cpp  input.h  load_data.py  load_input.py  param_config.yaml  preproc_aero.py  preproc_aerodynamic.py  preproc_aerodynamics.py  preproc_data.py  preproc_engine.py  preproc_input.py  preproc_model.py  preproc_prop.py
src/test/: test_aerodynamic.py  test_aerodynamics.py  test_atmosphere.py  test_engine.py  test_geodetic.py
src/util/: config_unit.yaml  config_unit.yml  interp.h  unit_config.yaml  util_interp.cpp  util_interp.h  util_math.h  util_misc.py  util_model.h  util_model_interp.cpp  util_ode.h  util_unit.py  util_yaml.py
tools/: hpr-sim_debug.py  makefile_old  pchip_test.m  pydata.m  pyinstaller_build.py  pyinstaller_build.sh  regression_checksum.py  regression_plot.py  regression_test.py  test_engine.py  test_eom.py  test_exec.py  test_exec.sh  test_flight.py  test_preproc_rasaero.py  test_rng.py  test_unit.py  test_yaml.py  update_index.sh
tools/matlab/: ode_check.m  ode_comp.ods  ode_fun.m
tools/test/: recursion.py  test.yaml  test.yml  test_yaml.py
tools/unit_test/: summary.yml
tools/unit_test/run0/: input.yml  stats.txt  stats.yml  telem.csv
tools/unit_test/run1/: input.yml  stats.txt  stats.yml  telem.csv
tools/unit_test/run2/: input.yml  stats.txt  stats.yml  telem.csv
tools/unit_test/run3/: input.yml  stats.txt  stats.yml  telem.csv
tools/unit_test/run4/: input.yml  stats.txt  stats.yml  telem.csv
tools/unit_test/run5/: input.yml  stats.yml  telem.csv
tools/unit_test/ubuntu/: summary.yml
tools/unit_test/ubuntu/run1/: input.yml  stats.yml  telem.csv  telem.npy  telem_md5.txt
tools/unit_test/ubuntu/run2/: input.yml  stats.yml  telem.csv  telem.npy  telem_md5.txt
tools/unit_test/ubuntu/run3/: input.yml  stats.yml  telem.csv  telem.npy  telem_md5.txt
tools/unit_test/ubuntu/run4/: input.yml  stats.yml  telem.npy  telem_md5.txt
tools/unit_test/ubuntu/run5/: input.yml  stats.yml  telem.npy  telem_md5.txt
tools/unit_test/windows/: summary.yml
tools/unit_test/windows/run0/: input.yml  stats.yml
tools/unit_test/windows/run1/: input.yml  stats.yml  telem.csv  telem.npy  telem_md5.txt
tools/unit_test/windows/run2/: input.yml  stats.yml  telem.csv  telem.npy  telem_md5.txt
tools/unit_test/windows/run3/: input.yml  stats.yml  telem.csv  telem.npy  telem_md5.txt
tools/unit_test/windows/run4/: input.yml  stats.yml  telem.csv  telem.npy  telem_md5.txt
tools/unit_test/windows/run5/: input.yml  stats.yml  telem.csv  telem.npy  telem_md5.txt
tools/windows/: summary.yml
tools/windows/run0/: telem.csv
tools/windows/run1/: stats.yml
tools/windows/run2/: input.yml
tools/windows/run3/: input.yml  stats.yml
